# share-price

./: README.md  email_copy.html  get_share_price.py  main.py  new_copy.html  post_to_slack.py  pyproject.toml  send_share_email.py  users.json
.github/workflows/: main.yaml
api/: __init__.py
html_tools/: __init__.py
utils/: __init__.py  utils.py
