[tool.poetry]
name = "nc-stock-alerts"
version = "0.1.0"
description = "An app for reading Northcoders Group PLC share price."
authors = ["xavbruggen <xavier.bruggen@northcoders.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
sendgrid = "^6.10.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
